<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/status"
        android:text="@string/status" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/time"
        android:text="@string/time" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/exit" />

    </LinearLayout>

</LinearLayout>
